--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,122 @@
-@font-face {
-  font-family: 'Montserrat';
-  src: url("../fonts/Montserrat Bold.eot");
-  src: url("../fonts/Montserrat Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat Bold.woff2") format("woff2"), url("../fonts/Montserrat Bold.woff") format("woff"), url("../fonts/Montserrat Bold.ttf") format("truetype"), url("../fonts/Montserrat Bold.svg#Montserrat Bold") format("svg");
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2044; }
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,600,900&display=swap&subset=cyrillic-ext");
+@import url("https://fonts.googleapis.com/css?family=Marck+Script&display=swap&subset=cyrillic");
+html {
+  font-size: 15px; }
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url("../fonts/Montserrat Italic.eot");
-  src: url("../fonts/Montserrat Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat Italic.woff2") format("woff2"), url("../fonts/Montserrat Italic.woff") format("woff"), url("../fonts/Montserrat Italic.ttf") format("truetype"), url("../fonts/Montserrat Italic.svg#Montserrat Italic") format("svg");
-  font-weight: 400;
-  font-style: italic;
-  font-stretch: normal;
-  unicode-range: U+0020-2044; }
+h1 {
+  font-size: 50px;
+  font-weight: 700; }
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url("../fonts/Montserrat Regular.eot");
-  src: url("../fonts/Montserrat Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat Regular.woff2") format("woff2"), url("../fonts/Montserrat Regular.woff") format("woff"), url("../fonts/Montserrat Regular.ttf") format("truetype"), url("../fonts/Montserrat Regular.svg#Montserrat Regular") format("svg");
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2044; }
+h2 {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 40px; }
 
-@font-face {
-  font-family: 'Marck Script';
-  src: url("../fonts/Marck Script.eot");
-  src: url("../fonts/Marck Script.eot?#iefix") format("embedded-opentype"), url("../fonts/Marck Script.woff2") format("woff2"), url("../fonts/Marck Script.woff") format("woff"), url("../fonts/Marck Script.ttf") format("truetype"), url("../fonts/Marck Script.svg#Marck Script") format("svg");
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-00FE; }
+.heading-1, h1, button, h2, h3 {
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1px; }
 
-ul.menu, li.menu__item {
+ul.menu,
+li.menu__item {
   display: block;
   padding: 0;
   margin: 0; }
 
-li.menu__item {
-  padding-right: 20px; }
-  li.menu__item a {
-    color: #303133; }
+li.menu__item a {
+  color: #303133;
+  text-decoration: none; }
+  li.menu__item a:hover {
+    color: rgba(48, 49, 51, 0.5); }
 
-.heading-1 {
-  text-transform: uppercase;
-  font-size: 12px;
+button {
+  border-radius: 5px;
+  padding: 0;
+  border: none;
+  cursor: pointer; }
+
+button:active, button:focus {
+  outline: none; }
+
+button::-moz-focus-inner {
+  border: 0; }
+
+.heading-1, button {
+  font-size: 0.85rem;
   letter-spacing: 1px;
+  font-weight: 600; }
+
+.menu__logo {
+  color: #303133;
+  font-family: 'Marck Script', cursive;
   font-weight: 600;
-  font-family: Montserrat, Helvetica, sans-serif; }
+  font-size: 40px;
+  display: block;
+  white-space: nowrap; }
+
+nav.navbar .dropdown:hover > .dropdown-menu {
+  display: block; }
+
+.dropdown-menu {
+  margin: 0;
+  margin-left: 15px;
+  padding: 10px;
+  padding-left: 28px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: none;
+  letter-spacing: 0px;
+  font-size: 15px; }
+  .dropdown-menu ul {
+    padding: 0; }
+    .dropdown-menu ul li {
+      list-style-type: disc; }
+      .dropdown-menu ul li a {
+        padding: 0; }
+        .dropdown-menu ul li a sub {
+          color: rgba(48, 49, 51, 0.5);
+          line-height: 10px; }
+
+.navbar {
+  padding: 0; }
+
+.dropdown-item {
+  white-space: normal; }
+
+/*hero*/
+.hero {
+  width: 100%;
+  height: auto;
+  background-image: url(/img/bglaw.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 100%;
+  text-align: center; }
+  .hero h1 {
+    color: black; }
+  .hero h2 {
+    display: block;
+    background-color: #004a79;
+    color: white;
+    padding: 44px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.45);
+    -moz-box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.45);
+    box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.45); }
+  .hero button {
+    background-color: #fbfbfb;
+    color: #303133; }
+    .hero button:hover {
+      background-color: #f2f2f2; }
+
+.hero__blueline {
+  max-width: 520px;
+  display: block;
+  margin: 0 auto; }
+
+.btn_orderbig {
+  padding: 14px 40px;
+  -webkit-box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important;
+  -moz-box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important;
+  box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important; }
 
 /*# sourceMappingURL=style.css.map */
