--- a/scss/style.css
+++ b/scss/style.css
@@ -7,6 +7,7 @@ html {
 h1 {
   font-size: 50px;
   font-weight: 700;
+  line-height: 70px;
 }
 
 h2 {
@@ -15,9 +16,40 @@ h2 {
   line-height: 40px;
 }
 
-.heading-1, h1, button, h2, h3 {
+h3 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h4 {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  padding-top: 1rem;
+}
+
+.heading-1, h1, button, h2, h4 {
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
+}
+
+.mobile-logo {
+  display: none;
+}
+
+.heading-1 {
   letter-spacing: 1px;
 }
 
@@ -28,6 +60,10 @@ li.menu__item {
   margin: 0;
 }
 
+li.menu__item {
+  padding-right: 1.5rem;
+}
+
 li.menu__item a {
   color: #303133;
   text-decoration: none;
@@ -35,6 +71,14 @@ li.menu__item a {
 
 li.menu__item a:hover {
   color: rgba(48, 49, 51, 0.5);
+}
+
+li.menu__item a.dropdown-item {
+  white-space: normal;
+}
+
+li.menu__item a.dropdown-item:hover {
+  color: #303133;
 }
 
 button {
@@ -63,8 +107,8 @@ button::-moz-focus-inner {
   font-family: 'Marck Script', cursive;
   font-weight: 600;
   font-size: 40px;
-  display: block;
   white-space: nowrap;
+  text-align: center;
 }
 
 nav.navbar .dropdown:hover > .dropdown-menu {
@@ -103,19 +147,18 @@ nav.navbar .dropdown:hover > .dropdown-menu {
   padding: 0;
 }
 
-.dropdown-item {
-  white-space: normal;
+.overlay {
+  opacity: 100;
 }
 
 /*hero*/
 .hero {
   width: 100%;
   height: auto;
-  background-image: url(/img/bglaw.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 0 100%;
+  background: url(/img/bglaw.jpg) 50% 80% no-repeat;
+  background-size: 100% contain;
   text-align: center;
+  background-color: #f7f7f7;
 }
 
 .hero h1 {
@@ -151,5 +194,203 @@ nav.navbar .dropdown:hover > .dropdown-menu {
   padding: 14px 40px;
   -webkit-box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important;
   box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important;
+}
+
+.grey-bg {
+  width: 100%;
+  background: #dddddd;
+  height: 300px;
+  text-align: center;
+  padding-top: 100px;
+  position: absolute;
+  z-index: -1;
+}
+
+.grey-bg h2 {
+  margin: 0 20px;
+}
+
+.white-block {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  color: #303133;
+  width: 250px;
+  max-width: 31%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 31%;
+          flex: 0 0 31%;
+  margin-top: 30px;
+}
+
+.white-block h3 {
+  height: 80px;
+  margin: 10px;
+}
+
+.white-block i.fas, .white-block i.fa {
+  color: #004a79;
+  font-size: 50px;
+  margin-left: 5%;
+}
+
+.blue-block {
+  background-color: #004a79;
+  border-radius: 10px;
+  padding: 20px;
+  color: white;
+  width: 250px;
+  max-width: 40%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
+  margin-top: 30px;
+}
+
+.blue-block h3 {
+  height: 80px;
+  margin: 10px;
+}
+
+.blue-block i.fas, .blue-block i.fa {
+  color: white;
+  font-size: 50px;
+  margin-left: 5%;
+}
+
+.blue-block a {
+  color: white;
+  text-decoration: none;
+}
+
+.blue-block a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.blue-block ul {
+  padding-left: 30px;
+}
+
+section {
+  background-color: #f7f7f7;
+  position: relative;
+  z-index: 0;
+}
+
+.grey-container {
+  padding-top: 150px;
+}
+
+footer {
+  width: 100%;
+  color: white;
+  font-size: 13px;
+  background-color: #141618;
+  padding: 30px 30px;
+}
+
+@media (max-width: 768px) {
+  header {
+    padding-top: 0;
+  }
+  .overlay {
+    position: fixed;
+    z-index: 100;
+    background: #004a79;
+    margin-top: 60px;
+    width: 100%;
+    height: 100%;
+    opacity: 80%;
+  }
+  .white-block {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48%;
+            flex: 0 0 48%;
+    max-width: 48%;
+    margin-top: 30px;
+  }
+  .hero {
+    background-position: 20% 50%;
+  }
+  .grey-container {
+    padding-top: 180px;
+  }
+  .blue-block {
+    max-width: 45%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 45%;
+            flex: 0 0 45%;
+    margin-top: 30px;
+  }
+  .topmenu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    top: 100px;
+    line-height: 35px;
+    padding-top: 20px;
+  }
+  .mobile-logo {
+    display: block;
+  }
+  .logo {
+    display: none;
+  }
+  .dropmenu {
+    top: 295px;
+  }
+  .menu__logo {
+    font-size: 25px;
+    text-align: left;
+  }
+  .topmenu, .dropmenu {
+    text-align: center;
+  }
+  .dropdown-menu {
+    background-color: transparent;
+  }
+  ul.menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+  ul.menu li.menu__item a {
+    color: white;
+    text-decoration: none;
+  }
+  ul.menu li.menu__item a:hover {
+    color: white;
+  }
+  ul.menu li.menu__item a.dropdown-item {
+    white-space: normal;
+  }
+  ul.menu li.menu__item a.dropdown-item:hover {
+    color: #303133;
+  }
+}
+
+@media (max-width: 576px) {
+  .white-block {
+    padding: 20px;
+    width: 250px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 90%;
+            flex: 0 0 90%;
+    max-width: 90%;
+    margin-top: 30px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .white-block h3 {
+    height: 80px;
+    margin: 10px;
+  }
+  .grey-container {
+    padding-top: 215px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
