--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@ $light-grey: rgba(48, 49, 51, .5);
 $dark-grey: rgb(48, 49, 51);
 $blue: #004a79;
 $text-fs: 15px;
+$dirty-white: rgb(247, 247, 247);
+$grey: rgb(221, 221, 221);
 
 html {
     font-size: $text-fs;
@@ -13,6 +15,7 @@ html {
 h1 {
     font-size: 50px;
     font-weight: 700;
+    line-height: 70px;;
 }
 
 h2 {
@@ -21,20 +24,47 @@ h2 {
     line-height: 40px;
 }
 
-.heading-1, h1, button, h2, h3 {
+h3 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+h4 {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+header {
+    display: flex;
+    flex-flow: column;
+    padding-top: 1rem;
+}
+
+.heading-1, h1, button, h2, h4{
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
+}
+
+.mobile-logo {
+    display: none;
+}
+
+.heading-1 {
     letter-spacing: 1px;
 }
 
-    ul.menu,
+ul.menu,
     li.menu__item {
         display: block;
         padding: 0;
         margin: 0;
     }
 
-    li.menu__item {
+li.menu__item {
+    padding-right: 1.5rem;
             a {
             color: $dark-grey;
             text-decoration: none;
@@ -43,6 +73,12 @@ h2 {
                 color: $light-grey;
             }
         }
+        a.dropdown-item {
+            white-space: normal;
+            &:hover {
+               color: $dark-grey; 
+            }
+          }
     }
 
     button {
@@ -69,9 +105,9 @@ h2 {
         color: $dark-grey;
         font-family: 'Marck Script', cursive;
         font-weight: 600;
-        font-size: 40px;
-        display: block;
+        font-size: 40px;        
         white-space: nowrap;
+        text-align: center;
     }
 
     nav.navbar .dropdown:hover > .dropdown-menu {
@@ -107,19 +143,18 @@ h2 {
       padding: 0;
   }
 
-  .dropdown-item {
-    white-space: normal;
-  }
+ .overlay {
+     opacity: 100;     
+ } 
 
   /*hero*/
   .hero {
       width: 100%;
       height: auto;
-      background-image: url(/img/bglaw.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: 0 100%; 
+      background: url(/img/bglaw.jpg) 50% 80% no-repeat;
+      background-size: 100% contain;       
       text-align: center;
+      background-color: $dirty-white;      
       h1 {
         color: black;
       }
@@ -128,7 +163,7 @@ h2 {
           background-color: $blue;
           color: white;
           padding: 44px;
-          border-radius: 10px;
+          border-radius: 10px;          
           -webkit-box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.45);
           -moz-box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.45);
          box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.45);
@@ -154,6 +189,204 @@ h2 {
     -moz-box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important;
     box-shadow: 0 8px 30px -6px rgba(0, 0, 0, 0.6) !important;
   }
+
+  .grey-bg {
+    width: 100%;
+    background: $grey; 
+    height: 300px;
+    text-align: center;
+    padding-top: 100px;
+    position: absolute;
+    z-index: -1;
+    h2 {
+        margin: 0 20px;
+    }
+  }
+
+  .white-block {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    color: $dark-grey;
+    width: 250px;
+    max-width: 31%;
+    flex: 0 0 31%;
+    margin-top: 30px;
+    h3 {
+        height: 80px;
+        margin: 10px;
+    }
+    i.fas, i.fa {
+        color: $blue;
+        font-size: 50px;
+        margin-left: 5%;
+        
+    }
+
+  }
+
+  .blue-block {
+    background-color: $blue;
+    border-radius: 10px;
+    padding: 20px;
+    color: white;
+    width: 250px;
+    max-width: 40%;
+    flex: 0 0 40%;
+    margin-top: 30px;
+    h3 {
+        height: 80px;
+        margin: 10px;
+    } 
+    i.fas, i.fa {
+        color: white;
+        font-size: 50px;
+        margin-left: 5%;  
+    }
+    a {
+        color: white;
+        text-decoration: none;
+        &:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+    }
+    ul {
+        padding-left: 30px;
+    }
+  }
+  
+
+  section {
+      background-color: $dirty-white;
+      position: relative;
+      z-index: 0;
+  }
+
+  .grey-container {
+   padding-top:150px;
+  }
+
+      
+
+footer {
+    width: 100%;
+    color: white;
+    font-size: 13px;
+    background-color: rgb(20, 22, 24);
+    padding: 30px 30px;
+}
+
+@media (max-width: 768px) {
+    header {
+        padding-top: 0;
+    }
+
+    .overlay {
+    position: fixed;
+    z-index: 100;
+     background: $blue;
+     margin-top: 60px;
+     width: 100%;
+     height: 100%;     
+     opacity: 80%;
+    }
+    .white-block {      
+        flex: 0 0 48%;
+        max-width: 48%;
+        margin-top: 30px;                 
+      }
+      .hero {
+          background-position: 20% 50%;
+      }
+      .grey-container {
+        padding-top:180px;
+       }
+       .blue-block {    
+        max-width: 45%;
+        flex: 0 0 45%;
+        margin-top: 30px;        
+      }
+
+    .topmenu {
+        display: flex;
+        justify-content: center;
+        top: 100px;
+        line-height: 35px;
+        padding-top: 20px;;
+    }
+
+    .mobile-logo {
+        display: block;
+        
+        
+    }
+    .logo {
+        display: none;
+       
+    }
+    .dropmenu {
+        top: 295px;
+    }
+    .menu__logo {
+        font-size: 25px;
+        text-align: left;
+    } 
+    
+    .topmenu, .dropmenu {
+       
+        text-align: center;
+        
+    }
+    .dropdown-menu {
+        background-color: transparent;
+    }
+    ul.menu {
+        flex-flow: column;
+        
+        li.menu__item {
+            a {
+            color: white;
+            text-decoration: none;
+
+            &:hover {
+                color: white;
+            }
+        }
+        a.dropdown-item {
+            white-space: normal;
+            &:hover {
+               color: $dark-grey; 
+            }
+          }
+    }
+    }
+    
+}
+
+
+@media (max-width: 576px) {
+    .white-block {     
+        padding: 20px;        
+        width: 250px;
+        flex: 0 0 90%;
+        max-width: 90%;
+        margin-top: 30px;
+        margin-right: auto;
+        margin-left: auto;
+        h3 {
+            height: 80px;
+            margin: 10px;
+        }
+            
+      }
+      .grey-container {
+        padding-top: 215px;
+    }
+ 
+}
+    
+  
+  
 
 
   
