--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,7 @@ header {
 
 .mobile-logo {
     display: none;
+
 }
 
 .heading-1 {
@@ -86,6 +87,7 @@ li.menu__item {
         padding: 0;
         border: none;
         cursor: pointer; 
+        transition: 0.3s;
     }
 
     button:active, button:focus {
@@ -109,10 +111,15 @@ li.menu__item {
         white-space: nowrap;
         text-align: center;
     }
+ 
 
     nav.navbar .dropdown:hover > .dropdown-menu {
         display: block; 
        }
+
+    .mobile-menu {
+        display: none;
+    }
 
   .dropdown-menu {
       
@@ -152,9 +159,15 @@ li.menu__item {
       width: 100%;
       height: auto;
       background: url(/img/bglaw.jpg) 50% 80% no-repeat;
-      background-size: 100% contain;       
+      background-size: 100% 100%;       
       text-align: center;
-      background-color: $dirty-white;      
+      background-color: $dirty-white;
+      transition: background-size 8s ease-in-out;
+      -moz-transition: background-size 8s ease-in-out;
+    -web-kit-transition: background-size 8s ease-in-out; 
+        &:hover {
+            background-size: 125% 125%;
+        }  
       h1 {
         color: black;
       }
@@ -178,6 +191,7 @@ li.menu__item {
   }
 
   .hero__blueline {
+      width: 80%;
       max-width: 520px;
       display: block;
       margin: 0 auto;
@@ -234,6 +248,9 @@ li.menu__item {
     max-width: 40%;
     flex: 0 0 40%;
     margin-top: 30px;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    margin-right: 3rem;
     h3 {
         height: 80px;
         margin: 10px;
@@ -266,7 +283,58 @@ li.menu__item {
    padding-top:150px;
   }
 
-      
+.callback-form {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1500;
+    top: 0;
+    background-color: rgba(0, 74, 121, 1);
+        input, textarea {
+        padding: 10px;
+        border-radius: 5px;
+        width: 100%;
+        border: none;
+        margin-top: 30px;
+        &:focus {
+            outline: none;
+        }
+    }
+    textarea {
+        
+        margin-bottom: 30px;
+    }
+    button {
+        padding: 12px 48px;
+        word-wrap: normal;
+        border-radius: 5px;
+        cursor: pointer;
+        background-color: white;
+        
+        &:hover {
+            background-color: #f2f2f2;
+         }
+         transition: 0.3s;
+    }
+    .close {
+        color: white;
+        margin-top: 30px;
+        cursor: pointer;
+        
+    
+    }
+    .form {
+        
+    }
+    .fz152 {
+        label {
+            color: white;
+        }
+        
+    }
+
+}    
 
 footer {
     width: 100%;
@@ -276,20 +344,93 @@ footer {
     padding: 30px 30px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) { 
+
     header {
         padding-top: 0;
     }
 
     .overlay {
+    display:none;
     position: fixed;
     z-index: 100;
      background: $blue;
      margin-top: 60px;
      width: 100%;
      height: 100%;     
-     opacity: 80%;
+     opacity: 100%;
+    }    
+    .visuallyHidden {
+        position: absolute; 
+        overflow: hidden; 
+        clip: rect(0 0 0 0); 
+        height: 1px; width: 1px; 
+        margin: -1px; padding: 0; border: 0; 
     }
+    .hamburger {
+        margin: 0 auto;
+        margin-top: 15px;
+        width: 30px;
+        height: 30px;
+        position: relative;
+    }    
+    .hamburger .bar {
+        padding: 0;
+        width: 30px;
+        height: 4px;
+        background-color: $dark-grey;
+        display: block;
+        border-radius: 4px;
+        transition: all 0.4s ease-in-out;
+        position: absolute; 
+    }    
+    .bar1 {
+        top: 0;
+    }    
+    .bar2,
+    .bar3 {
+        top: 13.5px;
+    }    
+    .bar3 {
+        right: 0;
+    }    
+    .bar4 {
+        bottom: 0;
+    }
+    
+    .hamburger3 .bar1 {
+        transform-origin: 5%;
+    }
+    
+    .hamburger3 .bar4 {
+        transform-origin: 5%;
+    }
+    
+    .checkbox3:checked + label > .hamburger3 > .bar1{
+        transform: rotate(45deg);
+        height: 3px;
+        width: 42px;
+    }
+    
+    .checkbox3:checked + label > .hamburger3 > .bar3{
+        transform: rotate(45deg);
+        height: 3px;
+        background-color: transparent;
+    }
+    
+    .checkbox3:checked + label > .hamburger3 > .bar2{
+        transform: rotate(-45deg);
+        height: 3px;
+        background-color: transparent;
+    }
+    
+    .checkbox3:checked + label > .hamburger3 > .bar4{
+        transform: rotate(-45deg);
+        height: 3px;
+        width: 42px;
+    }
+    
+
     .white-block {      
         flex: 0 0 48%;
         max-width: 48%;
@@ -297,6 +438,7 @@ footer {
       }
       .hero {
           background-position: 20% 50%;
+          margin-top: 70px;
       }
       .grey-container {
         padding-top:180px;
@@ -304,7 +446,10 @@ footer {
        .blue-block {    
         max-width: 45%;
         flex: 0 0 45%;
-        margin-top: 30px;        
+        margin-top: 30px;  
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-right: 2rem;   
       }
 
     .topmenu {
@@ -312,14 +457,19 @@ footer {
         justify-content: center;
         top: 100px;
         line-height: 35px;
-        padding-top: 20px;;
+        padding-top: 20px;
     }
 
     .mobile-logo {
         display: block;
-        
+        background-color: white;
+        .menuburger {
+            position: absolute;
+            right: 15px;
+        }
         
     }
+
     .logo {
         display: none;
        
@@ -339,9 +489,17 @@ footer {
     }
     .dropdown-menu {
         background-color: transparent;
-    }
+        position: relative;
+        border: none;
+        margin-left: 45px;
+        
+        ul {
+            color: white;
+        }
+        }
     ul.menu {
         flex-flow: column;
+        
         
         li.menu__item {
             a {
@@ -355,16 +513,50 @@ footer {
         a.dropdown-item {
             white-space: normal;
             &:hover {
-               color: $dark-grey; 
+               color: white; 
+            }
+            sub {
+                color: white;
             }
           }
     }
+    }
+    .fz152 {
+        margin-bottom: 30px;
     }
     
 }
 
 
 @media (max-width: 576px) {
+    h1 {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+    }
+
+    h2 {
+        font-size: 1.3rem;
+        line-height: 2.2rem;
+    }
+    .mobile-logo {        
+        .menuburger {
+            position: absolute;
+            right: 5px;
+        }
+        
+    }
+    .menu__logo {
+        font-size: 1.2rem;
+    }
+    .overlay {
+        margin-top: 50px;
+    }
+    .hero {
+        margin-top: 58px;
+    }
+    .grey-bg {
+        padding-top: 75px;
+    }
     .white-block {     
         padding: 20px;        
         width: 250px;
@@ -374,14 +566,24 @@ footer {
         margin-right: auto;
         margin-left: auto;
         h3 {
-            height: 80px;
+            height: unset;
             margin: 10px;
-        }
-            
+            margin-left: 0;
+        }            
       }
       .grey-container {
-        padding-top: 215px;
+        padding-top: 180px;
     }
+
+    .blue-block {    
+        max-width: 75%;
+        flex: 0 0 75%;
+        margin-top: 30px;
+        margin-right: 0; 
+        h3 {
+            height: unset;
+        }       
+      }   
  
 }
     
