--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,23 +154,28 @@ li.menu__item {
      opacity: 100;     
  } 
 
+
   /*hero*/
   .hero {
       width: 100%;
       height: auto;
-      background: url(/img/bglaw.jpg) 50% 80% no-repeat;
+      // background: url('../img/bglaw.jpg') 50% 80% no-repeat;
       background-size: 100% 100%;       
       text-align: center;
       background-color: $dirty-white;
+      position: relative;
       transition: background-size 8s ease-in-out;
       -moz-transition: background-size 8s ease-in-out;
-    -web-kit-transition: background-size 8s ease-in-out; 
-        &:hover {
-            background-size: 125% 125%;
-        }  
+      -web-kit-transition: background-size 8s ease-in-out; 
+      
+      // &:hover {
+      //     background-size: 125% 125%;
+      // }  
+      
       h1 {
         color: black;
       }
+      
       h2 {
           display: block;
           background-color: $blue;
@@ -188,6 +193,27 @@ li.menu__item {
            background-color: #f2f2f2;
         }
       }
+  }
+
+  @keyframes zoomin {
+    from {
+      transform: scale(1);
+    }
+    
+    to {
+      transform: scale(1.2);
+    }
+  }
+
+  .hero__img {
+    animation-name: zoomin;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+    height: 674px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
   }
 
   .hero__blueline {
