--- a/css/style.css
+++ b/css/style.css
@@ -114,17 +114,43 @@ nav.navbar .dropdown:hover > .dropdown-menu {
 .overlay {
   opacity: 100; }
 
+.kenburns {
+  overflow: auto;
+  -webkit-animation: kenburns 15s ease alternate forwards;
+  -moz-animation: kenburns 15s ease alternate forwards;
+  -o-animation: kenburns 15s ease alternate forwards;
+  animation: kenburns 15s ease alternate forwards; }
+
+@-webkit-keyframes kenburns {
+  100% {
+    -webkit-transform: scale(1.15); } }
+
+@-moz-keyframes kenburns {
+  100% {
+    -moz-transform: scale(1.15); } }
+
+@-o-keyframes kenburns {
+  100% {
+    -o-transform: scale(1.15); } }
+
+@keyframes kenburns {
+  100% {
+    transform: scale(1.15); } }
+
 /*hero*/
 .hero {
   width: 100%;
   height: auto;
-  background-size: 100% 100%;
   text-align: center;
   background-color: #f7f7f7;
   position: relative;
-  transition: background-size 8s ease-in-out;
-  -moz-transition: background-size 8s ease-in-out;
-  -web-kit-transition: background-size 8s ease-in-out; }
+  overflow: hidden; }
+  .hero .bg_zoom {
+    animation: kenburns 15s ease alternate forwards;
+    background-image: url("/img/bglaw.jpg");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover; }
   .hero h1 {
     color: black; }
   .hero h2 {
@@ -142,21 +168,14 @@ nav.navbar .dropdown:hover > .dropdown-menu {
     .hero button:hover {
       background-color: #f2f2f2; }
 
-@keyframes zoomin {
-  from {
-    transform: scale(1); }
-  to {
-    transform: scale(1.2); } }
-
 .hero__img {
-  animation-name: zoomin;
   animation-duration: 10s;
   animation-fill-mode: forwards;
   height: 674px;
   position: absolute;
   top: 0;
   left: 0;
-  width: auto; }
+  width: 100%; }
 
 .hero__blueline {
   width: 80%;
