--- a/scss/style.scss
+++ b/scss/style.scss
@@ -536,11 +536,11 @@ footer {
     font-weight: 600;
     text-align: center;
     padding: 15px;
-    line-height: 2;
+    line-height: 1;
     vertical-align: middle;
     right: 0;
     top: unset;
-    bottom: 0;
+    bottom: 50px;
     z-index: 5;
     animation-name: none;
    
@@ -548,7 +548,7 @@ footer {
     span {
         
         vertical-align: middle;
-        line-height: 1.9;
+        line-height: 1.2;
         a {
             color: $blue;
             padding-bottom: 15px;
