--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,19 @@ div.contacts {
       padding-bottom: 15px;
       display: inline-block; }
 
+@media (min-width: 768px) {
+  .topmenu {
+    background-color: white;
+    position: absolute; }
+    .topmenu.fixed {
+      left: 0;
+      position: fixed;
+      top: 0;
+      z-index: 10; } }
+
+.logo {
+  margin-top: 38px; }
+
 .kenburns {
   overflow: auto;
   -webkit-animation: kenburns 15s ease alternate forwards;
