--- a/scss/style.scss
+++ b/scss/style.scss
@@ -194,6 +194,24 @@ li.menu__item {
     
 }
 
+.topmenu {
+  @media (min-width: 768px) {    
+    background-color: white;
+    position: absolute;
+  
+    &.fixed {
+      left: 0;
+      position: fixed;
+      top: 0;
+      z-index: 10;
+    }
+  }
+}
+
+.logo {
+  margin-top: 38px;
+}
+
 .kenburns {
     overflow: auto;
     -webkit-animation: kenburns 15s ease alternate forwards;
@@ -580,7 +598,7 @@ footer {
         margin-right: 2rem;   
       }
 
-    .topmenu {
+      .topmenu {
         display: flex;
         justify-content: center;
         top: 100px;
