--- a/css/style.css
+++ b/css/style.css
@@ -24,20 +24,93 @@ h4 {
   font-size: 20px;
   line-height: 30px; }
 
+.heading-1,
+h1,
+button,
+h2,
+h4 {
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif; }
+
+.heading-1 {
+  letter-spacing: 1px; }
+
+section {
+  background-color: #f7f7f7;
+  position: relative;
+  z-index: 0; }
+
+button {
+  border-radius: 5px;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s; }
+
+button:active,
+button:focus {
+  outline: none; }
+
+button::-moz-focus-inner {
+  border: 0; }
+
+.heading-1,
+button {
+  font-size: 0.85rem;
+  letter-spacing: 1px;
+  font-weight: 600; }
+
 header {
   display: flex;
   flex-flow: column;
   padding-top: 1rem; }
 
-.heading-1, h1, button, h2, h4 {
-  text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif; }
-
 .mobile-logo {
   display: none; }
 
-.heading-1 {
-  letter-spacing: 1px; }
+.menu__logo {
+  color: #303133;
+  font-family: 'Marck Script', cursive;
+  font-weight: 600;
+  font-size: 40px;
+  white-space: nowrap;
+  text-align: center; }
+
+.logo {
+  margin-top: 38px; }
+
+@keyframes slide-down {
+  from {
+    top: -200px; }
+  to {
+    top: 0; } }
+
+div.contacts {
+  position: absolute;
+  background: #004a79;
+  width: auto;
+  height: auto;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  text-align: center;
+  padding: 15px;
+  line-height: 2;
+  vertical-align: middle;
+  right: 10%;
+  top: 0;
+  z-index: 5;
+  animation-name: slide-down;
+  animation-duration: 1s;
+  transition: all .5s ease; }
+  div.contacts span {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1.9; }
+    div.contacts span a {
+      color: white;
+      padding-bottom: 15px;
+      display: inline-block; }
 
 ul.menu,
 li.menu__item {
@@ -56,32 +129,6 @@ li.menu__item {
     white-space: normal; }
     li.menu__item a.dropdown-item:hover {
       color: #303133; }
-
-button {
-  border-radius: 5px;
-  padding: 0;
-  border: none;
-  cursor: pointer;
-  transition: 0.3s; }
-
-button:active, button:focus {
-  outline: none; }
-
-button::-moz-focus-inner {
-  border: 0; }
-
-.heading-1, button {
-  font-size: 0.85rem;
-  letter-spacing: 1px;
-  font-weight: 600; }
-
-.menu__logo {
-  color: #303133;
-  font-family: 'Marck Script', cursive;
-  font-weight: 600;
-  font-size: 40px;
-  white-space: nowrap;
-  text-align: center; }
 
 nav.navbar .dropdown:hover > .dropdown-menu {
   display: block; }
@@ -111,42 +158,6 @@ nav.navbar .dropdown:hover > .dropdown-menu {
 .navbar {
   padding: 0; }
 
-.overlay {
-  opacity: 100; }
-
-@keyframes contacts {
-  from {
-    top: -200px; }
-  to {
-    top: 0; } }
-
-div.contacts {
-  position: absolute;
-  background: #004a79;
-  width: auto;
-  height: auto;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  text-align: center;
-  padding: 15px;
-  line-height: 2;
-  vertical-align: middle;
-  right: 10%;
-  top: 0;
-  z-index: 5;
-  animation-name: contacts;
-  animation-duration: 1s;
-  transition: all .5s ease; }
-  div.contacts span {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 1.9; }
-    div.contacts span a {
-      color: white;
-      padding-bottom: 15px;
-      display: inline-block; }
-
 @media (min-width: 768px) {
   .topmenu {
     background-color: white;
@@ -157,9 +168,7 @@ div.contacts {
       top: 0;
       z-index: 10; } }
 
-.logo {
-  margin-top: 38px; }
-
+/*hero*/
 .kenburns {
   overflow: auto;
   -webkit-animation: kenburns 15s ease alternate forwards;
@@ -183,7 +192,6 @@ div.contacts {
   100% {
     transform: scale(1.15); } }
 
-/*hero*/
 .hero {
   width: 100%;
   height: auto;
@@ -193,6 +201,14 @@ div.contacts {
   overflow: hidden; }
   .hero .bg_zoom {
     animation: kenburns 15s ease alternate forwards; }
+
+@keyframes fadein {
+  from {
+    opacity: .5; }
+  to {
+    opacity: 1; } }
+  .hero .fadein {
+    animation: fadein 1s forwards; }
   .hero h1 {
     color: black;
     margin-top: 150px;
@@ -218,6 +234,19 @@ div.contacts {
   left: 0;
   width: 100%;
   object-fit: cover; }
+
+@keyframes slideup {
+  0% {
+    transform: translateY(300%); }
+  100% {
+    transform: translateY(0%); } }
+
+.slideup {
+  animation-name: slideup;
+  animation-duration: .5s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-delay: .3s; }
 
 .hero__blueline {
   width: 80%;
@@ -254,7 +283,8 @@ div.contacts {
   .white-block h3 {
     height: 80px;
     margin: 10px; }
-  .white-block i.fas, .white-block i.fa {
+  .white-block i.fas,
+  .white-block i.fa {
     color: #004a79;
     font-size: 50px;
     margin-left: 5%; }
@@ -274,7 +304,8 @@ div.contacts {
   .blue-block h3 {
     height: 80px;
     margin: 10px; }
-  .blue-block i.fas, .blue-block i.fa {
+  .blue-block i.fas,
+  .blue-block i.fa {
     color: white;
     font-size: 50px;
     margin-left: 5%; }
@@ -286,11 +317,6 @@ div.contacts {
   .blue-block ul {
     padding-left: 30px; }
 
-section {
-  background-color: #f7f7f7;
-  position: relative;
-  z-index: 0; }
-
 .grey-container {
   padding-top: 150px; }
 
@@ -301,14 +327,17 @@ section {
   position: fixed;
   z-index: 1500;
   top: 0;
-  background-color: #004a79; }
-  .callback-form input, .callback-form textarea {
+  background-color: #004a79;
+  overflow-y: auto; }
+  .callback-form input,
+  .callback-form textarea {
     padding: 10px;
     border-radius: 5px;
     width: 100%;
     border: none;
     margin-top: 30px; }
-    .callback-form input:focus, .callback-form textarea:focus {
+    .callback-form input:focus,
+    .callback-form textarea:focus {
       outline: none; }
   .callback-form textarea {
     margin-bottom: 30px; }
@@ -318,6 +347,7 @@ section {
     border-radius: 5px;
     cursor: pointer;
     background-color: white;
+    margin-bottom: 30px;
     transition: 0.3s; }
     .callback-form button:hover {
       background-color: #f2f2f2; }
@@ -338,23 +368,70 @@ footer {
 @media (max-width: 768px) {
   header {
     padding-top: 0; }
+  .topmenu {
+    display: flex;
+    justify-content: center;
+    top: 100px;
+    line-height: 35px;
+    padding-top: 60px; }
+  .mobile-logo {
+    display: block;
+    background-color: white; }
+    .mobile-logo .menuburger {
+      position: absolute;
+      right: 15px; }
+  .logo {
+    display: none; }
+  .dropmenu {
+    top: 295px; }
+  .menu__logo {
+    font-size: 25px;
+    text-align: left; }
+  .topmenu,
+  .dropmenu {
+    text-align: center; }
+  .dropdown-menu {
+    background-color: transparent;
+    position: relative;
+    border: none;
+    margin-left: 45px; }
+    .dropdown-menu ul {
+      color: white; }
+  ul.menu {
+    flex-flow: column; }
+    ul.menu li.menu__item a {
+      color: white;
+      text-decoration: none; }
+      ul.menu li.menu__item a:hover {
+        color: white; }
+    ul.menu li.menu__item a.dropdown-item {
+      white-space: normal; }
+      ul.menu li.menu__item a.dropdown-item:hover {
+        color: white; }
+      ul.menu li.menu__item a.dropdown-item sub {
+        color: white; }
   .hero__img {
     top: 0;
     left: 10px;
     object-fit: cover;
+    object-position: 25% top;
     height: 100%; }
-  .hero h1 {
-    margin-top: 50px;
-    margin-bottom: 30px; }
+  .hero {
+    background-position: 20% 50%;
+    margin-top: 70px; }
+    .hero h1 {
+      margin-top: 50px;
+      margin-bottom: 30px; }
   .overlay {
     display: none;
     position: fixed;
     z-index: 100;
     background: #004a79;
-    margin-top: 60px;
     width: 100%;
     height: 100%;
-    opacity: 100%; }
+    opacity: 100%;
+    overflow-y: auto;
+    overflow-x: hidden; }
   .visuallyHidden {
     position: absolute;
     overflow: hidden;
@@ -364,6 +441,31 @@ footer {
     margin: -1px;
     padding: 0;
     border: 0; }
+  div.contacts {
+    position: absolute;
+    background: white;
+    width: 100%;
+    height: auto;
+    color: #004a79;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    padding: 15px;
+    line-height: 1;
+    vertical-align: middle;
+    right: 0;
+    top: unset;
+    bottom: 0;
+    z-index: 5;
+    animation-name: none;
+    transition: none; }
+    div.contacts span {
+      vertical-align: middle;
+      line-height: 1.2; }
+      div.contacts span a {
+        color: #004a79;
+        padding-bottom: 15px;
+        display: inline-block; }
   .hamburger {
     margin: 0 auto;
     margin-top: 15px;
@@ -408,43 +510,10 @@ footer {
     transform: rotate(-45deg);
     height: 3px;
     width: 42px; }
-  @keyframes contacts {
-    from {
-      bottom: -200px; }
-    to {
-      bottom: 0; } }
-  div.contacts {
-    position: absolute;
-    background: white;
-    width: 100%;
-    height: auto;
-    color: #004a79;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    text-align: center;
-    padding: 15px;
-    line-height: 1;
-    vertical-align: middle;
-    right: 0;
-    top: unset;
-    bottom: 50px;
-    z-index: 5;
-    animation-name: none;
-    transition: none; }
-    div.contacts span {
-      vertical-align: middle;
-      line-height: 1.2; }
-      div.contacts span a {
-        color: #004a79;
-        padding-bottom: 15px;
-        display: inline-block; }
   .white-block {
     flex: 0 0 48%;
     max-width: 48%;
     margin-top: 30px; }
-  .hero {
-    background-position: 20% 50%;
-    margin-top: 70px; }
   .grey-container {
     padding-top: 180px; }
   .blue-block {
@@ -454,47 +523,6 @@ footer {
     padding-left: 1rem;
     padding-right: 1rem;
     margin-right: 2rem; }
-  .topmenu {
-    display: flex;
-    justify-content: center;
-    top: 100px;
-    line-height: 35px;
-    padding-top: 20px; }
-  .mobile-logo {
-    display: block;
-    background-color: white; }
-    .mobile-logo .menuburger {
-      position: absolute;
-      right: 15px; }
-  .logo {
-    display: none; }
-  .dropmenu {
-    top: 295px; }
-  .menu__logo {
-    font-size: 25px;
-    text-align: left; }
-  .topmenu, .dropmenu {
-    text-align: center; }
-  .dropdown-menu {
-    background-color: transparent;
-    position: relative;
-    border: none;
-    margin-left: 45px; }
-    .dropdown-menu ul {
-      color: white; }
-  ul.menu {
-    flex-flow: column; }
-    ul.menu li.menu__item a {
-      color: white;
-      text-decoration: none; }
-      ul.menu li.menu__item a:hover {
-        color: white; }
-    ul.menu li.menu__item a.dropdown-item {
-      white-space: normal; }
-      ul.menu li.menu__item a.dropdown-item:hover {
-        color: white; }
-      ul.menu li.menu__item a.dropdown-item sub {
-        color: white; }
   .fz152 {
     margin-bottom: 30px; } }
 
@@ -510,8 +538,6 @@ footer {
     right: 5px; }
   .menu__logo {
     font-size: 1.2rem; }
-  .overlay {
-    margin-top: 50px; }
   .hero {
     margin-top: 58px; }
   .grey-bg {
