--- a/scss/style.scss
+++ b/scss/style.scss
@@ -539,6 +539,10 @@ footer {
         padding-top: 60px;
     }
 
+    .fixed-top {
+      position: unset;
+    }
+
     .mobile-logo {
         display: block;
         background-color: white;
