--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,8 @@ footer {
   .logo {
     display: none; }
   .dropmenu {
-    top: 295px; }
+    top: 295px;
+    padding-bottom: 99px; }
   .menu__logo {
     font-size: 25px;
     text-align: left; }
@@ -419,10 +420,8 @@ footer {
     object-position: 25% top;
     height: 100%; }
   .hero {
-    background-position: 20% 50%;
-    margin-top: 70px; }
+    background-position: 20% 50%; }
     .hero h1 {
-      margin-top: 50px;
       margin-bottom: 30px; }
   .overlay {
     display: none;
@@ -444,7 +443,7 @@ footer {
     padding: 0;
     border: 0; }
   div.contacts {
-    position: absolute;
+    position: fixed;
     background: white;
     width: 100%;
     height: auto;
@@ -540,8 +539,6 @@ footer {
     right: 5px; }
   .menu__logo {
     font-size: 1.2rem; }
-  .hero {
-    margin-top: 58px; }
   .grey-bg {
     padding-top: 75px; }
   .white-block {
