--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,10 @@ html {
     font-size: $text-fs;
 }
 
+body {
+    height: 100%;
+}
+
 h1 {
     font-size: 50px;
     font-weight: 700;
@@ -37,6 +41,16 @@ h4 {
     font-weight: 300;
     font-size: 20px;
     line-height: 30px;
+}
+
+.wrap {
+    display: table;
+	height: 100%;
+}
+
+.content {
+    display: table-row;
+	height: 100%;
 }
 
 .heading-1,
@@ -385,6 +399,21 @@ nav.navbar .dropdown:hover>.dropdown-menu {
     }
 }
 
+.content-block {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    color: $dark-grey;
+    
+    margin-top: 30px;
+
+    h3 {
+        height: 80px;
+        margin: 10px;
+    }
+
+}
+
 .white-block {
     background-color: white;
     border-radius: 10px;
@@ -519,10 +548,17 @@ nav.navbar .dropdown:hover>.dropdown-menu {
 
 footer {
     width: 100%;
+    height: 80px;
     color: white;
     font-size: 13px;
     background-color: rgb(20, 22, 24);
     padding: 30px 30px;
+    
+}
+
+.footer-content {
+    position: absolute;
+    bottom: 0;
 }
 
 @media (max-width: 768px) {
@@ -832,6 +868,7 @@ footer {
         padding-top: 180px;
     }
 
+    
     .blue-block {
         max-width: 75%;
         flex: 0 0 75%;
